<resources>
    <string name="app_name">Gatos en acción</string>

    <string name="red">Red</string>
    <string name="indigo">Indigo</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>>
    <string name="grey">Grey</string>
    <string name="bluegrey">Blue Grey</string>
    <string name="amber">Amber</string>
    <string name="teal">Teal</string>
    <string name="deeppurple">Deep Purple </string>
    <string name="cyan">Cyan</string>
    <string name="brown">Brown</string>
    <string name="add_favorites">añadir a favoritos</string>
    <string name="Gatos">todos Gatos</string>
    <string name="peliculas">todas las peliculas\n</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="registro">Registro</string>
    <string name="correo">correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="sigiente">Sigiente</string>
    <string name="cancelar">Cancelar</string>
    <string name="apellido">Apellido</string>
    <string name="inicio_de_sesion">inicio de sesión</string>
    <string name="ajustes">ajustes</string>
    <string name="about">about</string>
    <string name="compra">cesta de la compra</string>
    <string name="sample_contract_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut risus congue nisi porttitor posuere. Etiam nec ligula suscipit, ultrices ex ut, molestie nulla. Vivamus suscipit euismod elementum. Vestibulum sagittis neque eu condimentum tincidunt. In eu tortor pulvinar, convallis velit vel, porta ipsum. Vestibulum felis mi, ultrices suscipit pellentesque at, malesuada a erat. Morbi ex dolor, commodo nec congue viverra, fermentum sed nibh. Ut convallis lorem at orci posuere ornare. Maecenas blandit bibendum dolor ut feugiat. Pellentesque eget nisi eget odio auctor interdum.\n\nDuis turpis erat, faucibus non hendrerit nec, dapibus et eros. Ut sagittis placerat velit et fringilla. Etiam ultrices ac purus vitae interdum. Ut vulputate odio ut lectus porttitor, a tincidunt eros ornare. Duis eu posuere enim. Quisque at consectetur mi. Curabitur mollis sapien nisi, porta condimentum elit varius a. Phasellus pellentesque leo nec velit eleifend ullamcorper. Sed eu gravida elit. Integer consectetur nibh ac eros efficitur pellentesque. Nullam dolor nunc, rutrum vitae pharetra a, maximus quis augue. Aliquam eros neque, imperdiet a mauris sit amet, gravida fermentum tortor. Donec consectetur, augue in imperdiet cursus, ipsum sapien faucibus tellus, sed egestas diam tortor in nisl.\n\nPellentesque eu auctor urna, et sollicitudin nulla. Curabitur viverra libero non lobortis posuere. Praesent pellentesque elit sit amet lectus molestie vestibulum. In enim lacus, interdum sit amet leo nec, scelerisque congue ante. Aliquam erat volutpat. Donec scelerisque mi a arcu finibus, sit amet consectetur risus fermentum. Donec blandit nulla maximus, vestibulum diam vitae, blandit enim. Praesent vitae urna et lorem suscipit accumsan. Nunc quis mauris ac erat eleifend elementum. Pellentesque viverra arcu dui, eu interdum eros suscipit vel. Curabitur imperdiet volutpat urna id consequat. Quisque et interdum nulla. Fusce nec blandit ex, volutpat viverra augue. Donec scelerisque nibh maximus purus ultricies euismod vel ac sapien. Aenean sodales semper iaculis. Etiam sollicitudin et sem id feugiat.\n\nNullam sed vestibulum metus, non interdum tortor. Etiam sit amet pharetra dolor. Duis tempor ipsum convallis auctor porttitor. Fusce vitae blandit elit, id lacinia lorem. Ut eleifend fringilla magna eget tincidunt. Aenean vel ultrices orci, convallis semper lectus. Integer vulputate mollis ex, in faucibus risus euismod id. Praesent in volutpat eros, ut venenatis sapien. In euismod ante dictum, lacinia justo ut, vehicula est. Suspendisse mauris ante, blandit non magna sit amet, facilisis imperdiet enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit.\n\nDonec efficitur, urna sed sollicitudin ultrices, massa neque gravida massa, a tincidunt arcu metus non neque. Curabitur orci lorem, sollicitudin scelerisque tempor a, euismod at quam. Aliquam erat volutpat. Maecenas nec est eros. Mauris congue ac quam vitae consectetur. Proin eget sodales nunc. Integer viverra purus ullamcorper neque imperdiet, vestibulum pharetra enim accumsan. Nulla ullamcorper ullamcorper suscipit. Etiam pellentesque ex nunc. Integer et vestibulum lacus. Mauris et sagittis massa, eu vehicula tortor. Vestibulum rhoncus rutrum arcu, quis imperdiet augue feugiat sit amet. Quisque euismod vitae sapien vel venenatis.\n\nIn viverra nisl nec tempus condimentum. Sed accumsan enim in odio aliquam vehicula. Curabitur rutrum accumsan lectus sed molestie. Mauris tellus turpis, finibus id nulla eu, interdum tincidunt nunc. In vel ligula nec urna posuere sodales. Ut a lorem sit amet nunc gravida malesuada. Nam vehicula neque vel lorem congue, non lacinia elit porta. Morbi odio lectus, rutrum sit amet odio eu, mollis vehicula tortor. Quisque dictum vel augue quis bibendum. Mauris bibendum est eget molestie ultricies. Fusce eros massa, efficitur ac dolor in, scelerisque rhoncus nulla. Vestibulum convallis ex id nunc iaculis, ut molestie risus consequat. Praesent ac purus nisi. In sollicitudin lobortis libero, id feugiat justo venenatis ac.\n\nVestibulum malesuada velit sit amet hendrerit venenatis. Donec eleifend eu enim sed maximus. Praesent ac augue at enim pellentesque efficitur. Vivamus velit arcu, pellentesque in nisi ac, malesuada aliquam dolor. Mauris varius nulla dolor, sed rutrum augue elementum a. Morbi neque orci, accumsan a dui sit amet, blandit porta mi. Morbi ligula nunc, imperdiet quis eros ac, consequat semper sem. Vestibulum dictum, urna luctus dapibus tempor, justo nibh molestie felis, vel cursus est tortor interdum nisl. Mauris consequat mollis fermentum. Donec feugiat diam at orci congue, id iaculis turpis pharetra. Praesent tempor nulla non finibus gravida. Quisque sem nulla, tincidunt vel faucibus ac, venenatis ut leo. Nunc id porta ligula, id consequat est.\n\nVivamus laoreet libero a leo efficitur, eget maximus lectus porta. Fusce eu nulla et odio dignissim mattis vel sit amet dolor. Quisque ligula nibh, mattis sed dui non, pharetra commodo enim. Nulla pharetra tellus ut dolor maximus condimentum. Nam id enim placerat, placerat magna quis, gravida dui. Donec non tortor ac ante iaculis varius. Sed fringilla sem ex, eget euismod nibh dictum a. In venenatis mauris quis purus pellentesque aliquam. Proin non turpis in ante bibendum placerat vitae at turpis. Ut augue urna, pharetra a risus sit amet, imperdiet pharetra sem. Phasellus sem risus, placerat ut lacus at, pellentesque dictum quam. Nullam diam neque, lobortis sed condimentum vitae, suscipit ac lectus. Vivamus auctor enim id nisi tincidunt, vel vulputate augue ultrices. Donec tempus dolor vel nulla blandit, nec ultrices magna dapibus. Quisque quis justo quis tortor condimentum aliquam placerat ut enim. Aenean nec mauris sagittis, volutpat purus ac, fringilla nisl.\n\nCurabitur sodales, sem sit amet consequat varius, sem quam pharetra lacus, vel blandit nulla mi et libero. Phasellus ultricies ex at mattis efficitur. Praesent a nulla augue. Aliquam imperdiet felis vitae tristique pharetra. Nunc in erat nisi. Maecenas feugiat, enim eu varius vulputate, metus orci porta sapien, eu venenatis nisl nibh sit amet nunc. Etiam sed lacus lobortis ligula maximus iaculis. Praesent pharetra justo erat, vel sollicitudin odio ultricies quis.\n\nVivamus rhoncus accumsan nisi, id ultrices sem vestibulum vitae. Nullam quis elit eu nisi euismod rhoncus. Donec eu posuere nisl. Sed nunc mauris, laoreet eget ultricies vel, fermentum id quam. Morbi euismod facilisis orci id luctus. Nulla sed felis gravida, sollicitudin felis id, posuere justo. Fusce interdum aliquet felis eu vulputate. Pellentesque ornare turpis a ligula tristique, ac finibus orci feugiat. Fusce sed sem blandit tellus rhoncus porttitor ac id nisi. Pellentesque egestas dolor eget ligula sagittis iaculis. Nam pulvinar, velit maximus tempor vestibulum, lacus dolor lobortis justo, a congue massa est vitae leo. Duis sit amet elit interdum, volutpat nunc quis, pulvinar dui. Aliquam volutpat, mauris nec rutrum scelerisque, nibh ante porttitor justo, faucibus convallis tortor risus ut tellus. Praesent ac lorem nec quam egestas dapibus.</string>
    <string name="guardar">Guardar</string>
    <string name="cancelarV2">No darle de comer al michi</string>
    <string name="comprar_comida">comprar comida</string>
    <string name="genero_masculino">Genero: Masculino</string>
    <string name="edad_2_a_os">edad:2 años</string>
    <string name="comida_premium">comida premium</string>
    <string name="cesta_actual">CESTA ACTUAL</string>
    <string name="producto">Producto</string>
    <string name="subtotal">Subtotal</string>
    <string name="realizar_pedido">Realizar Pedido</string>
    <string name="coste_envio">Coste envío</string>
    <string name="donaciones">10 €</string>
    <string name="cupon">Descuento fidelidad</string>
    <string name="euros_cupon">-5€</string>
    <string name="total">total\n</string>

</resources>