<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cestaDeLaCompra"
    >

    <TextView
        android:id="@+id/textView18"
        android:layout_width="@dimen/form_widths"
        android:layout_height="@dimen/form_heights"
        android:layout_marginTop="@dimen/main_buttons_margin_top_bottom"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/cesta_actual"
        android:textSize="@dimen/textSize_lista_articulos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/padding_tables_16dp"
        android:stretchColumns="2"
        app:layout_constraintBottom_toTopOf="@+id/table_subtotales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#128675"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="180dp"
                android:layout_column="0"
                android:text="@string/producto"
                android:textColor="@android:color/white"
                android:textSize="@dimen/title_tables_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_column="1"
                android:gravity="center"
                android:text="@string/unidades"
                android:textColor="@android:color/white"
                android:textSize="@dimen/title_tables_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_column="2"
                android:gravity="center"
                android:text="@string/subtotal"
                android:textColor="@android:color/white"
                android:textSize="@dimen/title_tables_text_size"
                android:textStyle="bold" />
        </TableRow>


    </TableLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cesta_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/listaarticulos_button_margin_top_bottom"
        android:onClick="realizarPedido"
        android:text="@string/realizar_pedido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/table_subtotales"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_tables_16dp"
        android:stretchColumns="3"
        app:layout_constraintBottom_toTopOf="@+id/cesta_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/linea"
            android:layout_height="@dimen/ancho_linea_tabla"
            android:background="#FF909090" />

        <TableRow android:id="@+id/Row_subtotal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="150sp" />

            <TextView
                android:layout_column="2"
                android:padding="3dip"
                android:text="@string/subtotal"
                android:textColor="#00796B"
                android:textSize="@dimen/rows_tables_size" />

            <TextView
                android:id="@+id/subtotal"
                android:layout_width="78dp"
                android:layout_column="3"
                android:gravity="end"
                android:padding="3dip"
                android:textSize="@dimen/rows_tables_size" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView6"
                android:layout_column="2"
                android:padding="3dip"
                android:text="@string/coste_envio"
                android:textColor="#00796B"
                android:textSize="@dimen/rows_tables_size" />

            <TextView
                android:layout_column="3"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/donaciones"
                android:textSize="@dimen/rows_tables_size" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView8"
                android:layout_column="2"
                android:padding="3dip"
                android:text="@string/cupon"
                android:textColor="#00796B"
                android:textSize="@dimen/rows_tables_size" />

            <TextView
                android:id="@+id/textView9"
                android:layout_column="3"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/euros_cupon"
                android:textSize="@dimen/rows_tables_size" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView5"
                android:layout_column="2"
                android:padding="3dip"
                android:text="@string/total"
                android:textColor="#00796B"
                android:textSize="@dimen/rows_tables_size" />

            <TextView
                android:id="@+id/TOTAL"

                android:layout_column="3"
                android:gravity="end"
                android:padding="3dip"
                android:textSize="@dimen/rows_tables_size" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>