<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Layout.ComprarComida">

    <ImageView
        android:id="@+id/detail_cat_image"
        android:layout_width="411dp"
        android:layout_height="430dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="84dp"
        android:text="@string/comprar_comida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="414dp"
        android:layout_height="134dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/detail_cat_image"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

        <TextView
            android:id="@+id/txtEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/edad_2_a_os" />

        <TextView
            android:id="@+id/txtGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/genero_masculino" />

        <CheckBox
            android:id="@+id/checkBoxComidaPremium"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:gravity="center_horizontal"
            android:text="@string/comida_premium" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Michi: tumbuctu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="385dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancelarV2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardar"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>
